css: p: fix: text-align should be start

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ p {
 	font-family: var(--body-font-family);
 	font-size: 24px;
 	line-height: 1.2em;
-	text-align: justify;
+	text-align: start;
 }
 p > strong {
 	font-weight: bold;
